[package]
name = "moc"
version = "0.14.1"
authors = [
  "F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>",
  "Matthieu Baumann <matthieu.baumann@astro.unistra.fr>"
]
description = """
Library made to create and manipulate HEALPix
Multi-Order Coverages maps (MOCs), see https://ivoa.net/documents/MOC/
"""
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["science", "data-structures", "algorithms"]
keywords = ["healpix", "moc"]
documentation = "https://docs.rs/moc"
homepage = "https://github.com/cds-astro/cds-moc-rust/"
repository = "https://github.com/cds-astro/cds-moc-rust/"
edition = "2021"
exclude = [
  "resources",
]

[lib]
name = "moc"
path = "src/lib.rs"
test = true
doctest = true
bench = true

[workspace]
members = [
  "crates/cli", 
  "crates/set"
]
exclude = ["crates/wasm"]
# I so far have a problem with building the cli with:
# - cargo deb --target x86_64-unknown-linux-musl
# It tries to compile crates/wasm but failed because of
# crate-type = ["cdylib"] in wasm Cargo.toml


[dependencies]
num = "0.4.1"
nom = "7.1.3"
quick-error = "2.0.1"
healpix = { package = "cdshealpix", version = "0.6.8" }
mapproj = "0.3"
serde_json = "1.0"
byteorder = "1.4.3"
rayon = "1.5.1"
flate2 = "1.0.22" # Compression/decompression
png = "0.17" # For png
slab = { version = "0.4", optional = true }
stc-s = "0.1"
thiserror = "1.0" # For STC-S (quick-error should be replaced by thiserror everywhere)

[dev-dependencies]
rand = "0.8.3"
criterion = "0.5"

[features]
default = []
storage = ["dep:slab"]


[[bench]]
name = "ranges2cells"
harness = false

[[bench]]
name = "moc_and"
harness = false

[[bench]]
name = "moc_or"
harness = false

[[bench]]
name = "moc_minus"
harness = false

[[bench]]
name = "moc_multi_or"
harness = false

# Run a specific bench:
#  RUSTFLAGS='-C target-cpu=native' cargo bench --bench moc_minus

# See default profiles: https://doc.rust-lang.org/cargo/reference/profiles.html
# But bench can be run with the cpu-native option: RUSTFLAGS='-C target-cpu=native' cargo bench
[profile.bench]
opt-level = 3

# See opti here: https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true    # Optimize at the link stage (may remove dead code)
codegen-units = 1
panic = "abort"
strip = "debuginfo"

