[package]
name = "moc-wasm"
version = "0.8.2"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
description = """
WASM library to create and manipulate HEALPix
Multi-Order Coverages maps (MOCs), see https://ivoa.net/documents/MOC/
"""
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["science", "data-structures", "algorithms"]
keywords = ["healpix", "moc"]
documentation = "https://github.com/cds-astro/cds-moc-rust/tree/main/crates/wasm"
homepage = "https://github.com/cds-astro/cds-moc-rust/tree/main/crates/wasm"
repository = "https://github.com/cds-astro/cds-moc-rust/tree/main/crates/wasm"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
moclib = { package = "moc", path = "../..", features = ["storage"] }
healpix = { package = "cdshealpix", version = "0.6.7" }
serde = { version = "1.0.80", features = ["derive"] }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.28"
js-sys = "0.3.52"
unreachable = "1.0.0" # Added for wasm size optimization, see  https://rustwasm.github.io/book/reference/code-size.html
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[dependencies.web-sys]
version = "0.3.52"
features = [
  'console',
  'Blob',
  'BlobPropertyBag',
  'Document',
  'Element',
  'Event',
  'File',
  'FileList',
  'FileReader',
  'Headers',
  'HtmlAnchorElement',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlUListElement',
  'Node',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Url',
  'Window',
]

# To reduce WASM size, see https://rustwasm.github.io/book/reference/code-size.html
[profile.release]
panic = 'unwind'
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 3
lto = true


[package.metadata.wasm-pack.profile.release]
wasm-opt = true

